Padding bug fix in devsoc.js + updated scrollbar

--- a/src/sections/devsoc/devsoc.scss
+++ b/src/sections/devsoc/devsoc.scss
@@ -18,6 +18,7 @@ body {
    font-size: 24px;
    font-weight: normal;
    color: $secondary !important;
+   padding-top: 3%;
 }
 .col-md-6 {
    padding-left: 10%;
@@ -43,4 +44,18 @@ body {
 .btn-primary {
    background: $tertiary !important;
    font-family: 'Roboto' !important;
+}
+
+::-webkit-scrollbar-track {
+   -webkit-box-shadow: inset 0 0 6px $primary;
+   background-color: $primary;
+}
+
+::-webkit-scrollbar {
+   width: 6px;
+   background-color: $secondary;
+}
+
+::-webkit-scrollbar-thumb {
+   background-color: $secondary;
 }
